Method invokes inefficient Number constructor; use static valueOf instead
Signed-off-by: Nick Sieger <nick@nicksieger.com>